--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/postcss": "^4.0.3",
     "express": "^4.18.2",
     "flowbite": "^3.1.1",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.3",
     "tslib": "^2.3.0",
@@ -35,6 +36,7 @@
     "@angular/compiler-cli": "^19.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
