--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.5",
     "@tailwindcss/postcss": "^4.0.3",
+    "@turf/turf": "^7.2.0",
     "express": "^4.18.2",
     "flowbite": "^3.1.1",
     "flowbite-datepicker": "^1.3.2",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
+    "simple-datatables": "^10.0.0",
     "sweetalert2": "^11.16.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
