--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "flowbite": "^3.1.1",
     "flowbite-datepicker": "^1.3.2",
     "leaflet": "^1.9.4",
+    "ngx-daterangepicker-material": "^6.0.4",
     "rxjs": "~7.8.0",
     "simple-datatables": "^10.0.0",
     "sweetalert2": "^11.16.0",
