--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "flowbite-datepicker": "^1.3.2",
     "leaflet": "^1.9.4",
     "ngx-daterangepicker-material": "^6.0.4",
+    "proj4": "^2.15.0",
     "rxjs": "~7.8.0",
     "simple-datatables": "^10.0.0",
     "sweetalert2": "^11.16.0",
@@ -44,6 +45,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.16",
     "@types/node": "^18.18.0",
+    "@types/proj4": "^2.5.6",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
