--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.5",
-    "@tailwindcss/postcss": "^4.0.3",
+    "@tailwindcss/postcss": "^4.0.6",
     "@turf/turf": "^7.2.0",
     "express": "^4.18.2",
     "flowbite": "^3.1.1",
     "flowbite-datepicker": "^1.3.2",
     "leaflet": "^1.9.4",
     "ngx-daterangepicker-material": "^6.0.4",
+    "postcss": "^8.5.2",
     "proj4": "^2.15.0",
     "rxjs": "~7.8.0",
     "simple-datatables": "^10.0.0",
@@ -52,7 +53,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "tailwindcss": "^4.0.3",
+    "tailwindcss": "^4.0.6",
     "typescript": "~5.7.2"
   }
 }
