--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "resist-app",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -26,11 +27,10 @@
     "@tailwindcss/postcss": "^4.0.6",
     "@turf/turf": "^7.2.0",
     "express": "^4.18.2",
-    "flowbite": "^3.1.1",
+    "flowbite": "^3.1.2",
     "flowbite-datepicker": "^1.3.2",
     "leaflet": "^1.9.4",
     "ngx-daterangepicker-material": "^6.0.4",
-    "postcss": "^8.5.2",
     "proj4": "^2.15.0",
     "rxjs": "~7.8.0",
     "simple-datatables": "^10.0.0",
@@ -47,13 +47,15 @@
     "@types/leaflet": "^1.9.16",
     "@types/node": "^18.18.0",
     "@types/proj4": "^2.5.6",
+    "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "tailwindcss": "^4.0.6",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2"
   }
 }
