--- a/package.json
+++ b/package.json
@@ -1,61 +1,66 @@
 {
-  "name": "resist-app",
-  "version": "0.0.0",
-  "type": "module",
+  "name": "tailwind-angular-starter",
+  "version": "2.0.0",
+  "description": "A free and open-source starter project to help you get started with the core Flowbite Library components and Angular",
+  "license": "MIT",
+  "repository": "https://github.com/themesberg/tailwind-angular-starter",
+  "homepage": "https://flowbite.com/docs/getting-started/angular/",
+  "contributors": [
+    "Zoltán Szőgyényi (https://x.com/zoltanszogyenyi)"
+  ],
+  "author": "Bergside Inc.",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:RESIST-app": "node dist/resist-app/server/server.mjs"
+    "serve:ssr:flowbite-app": "node dist/flowbite-app/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.0",
-    "@angular/cdk": "^19.1.3",
-    "@angular/common": "^19.1.0",
-    "@angular/compiler": "^19.1.0",
-    "@angular/core": "^19.1.0",
-    "@angular/forms": "^19.1.0",
-    "@angular/material": "^19.1.3",
-    "@angular/platform-browser": "^19.1.0",
-    "@angular/platform-browser-dynamic": "^19.1.0",
-    "@angular/platform-server": "^19.1.0",
-    "@angular/router": "^19.1.0",
-    "@angular/ssr": "^19.1.5",
-    "@tailwindcss/postcss": "^4.0.6",
+    "@angular/animations": "^19.2.0",
+    "@angular/cdk": "^19.2.2",
+    "@angular/common": "^19.2.0",
+    "@angular/compiler": "^19.2.0",
+    "@angular/core": "^19.2.0",
+    "@angular/forms": "^19.2.0",
+    "@angular/platform-browser": "^19.2.0",
+    "@angular/platform-browser-dynamic": "^19.2.0",
+    "@angular/platform-server": "^19.2.0",
+    "@angular/router": "^19.2.0",
+    "@angular/ssr": "^19.2.0",
+    "@tailwindcss/postcss": "^4.0.9",
     "@turf/turf": "^7.2.0",
     "express": "^4.18.2",
     "flowbite": "^3.1.2",
     "flowbite-datepicker": "^1.3.2",
     "leaflet": "^1.9.4",
-    "ngx-daterangepicker-material": "^6.0.4",
+    "postcss": "^8.5.3",
     "proj4": "^2.15.0",
     "rxjs": "~7.8.0",
     "simple-datatables": "^10.0.0",
     "sweetalert2": "^11.16.0",
+    "tailwindcss": "^4.0.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.5",
-    "@angular/cli": "^19.1.5",
-    "@angular/compiler-cli": "^19.1.0",
+    "@angular-devkit/build-angular": "^19.2.0",
+    "@angular/cli": "^19.2.0",
+    "@angular/compiler-cli": "^19.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.16",
     "@types/node": "^18.18.0",
     "@types/proj4": "^2.5.6",
     "autoprefixer": "^10.4.20",
-    "jasmine-core": "~5.5.0",
+    "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2"
   }
 }
