--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/node": "^18.18.0",
     "@types/proj4": "^2.5.6",
     "autoprefixer": "^10.4.20",
+    "flowbite-typography": "^1.0.5",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
